# fprintd

./: .gitignore  Makefile.am  NEWS  README  TODO  acinclude.m4  autogen.sh  configure.ac
data/: Makefile.am  fprintd.conf  net.reactivated.Fprint.conf  net.reactivated.Fprint.service.in  net.reactivated.fprint.device.policy.in
doc/: Makefile.am  fprintd-docs.xml
doc/dbus/: Makefile.am  spec-to-docbook.xsl
examples/: Makefile.am  demo.c  enroll.c
pam/: Makefile.am  README  pam_fprintd.c
po/: POTFILES.in
src/: Makefile.am  device.c  device.xml  egg-dbus-monitor.c  egg-dbus-monitor.h  file_storage.c  file_storage.h  fprintd.h  fprintd.xml  main.c  manager.c  manager.xml  storage.h
tests/: Makefile.am  delete.c  enroll.c  list.c  verify.c
